Fix and improve panel collapsing (close #126)
The ExtJs default behaviour is awful so we need a hack to
get this right.

--- a/catalyst/root/css/paperpile.css
+++ b/catalyst/root/css/paperpile.css
@@ -1824,3 +1824,7 @@ table.pp-meta-form {
     color: gray;
 }
 
+
+.pp-collapsed {
+    cursor:pointer;
+}
